--- a/06-To-Do-List-App/To-Do list.css
+++ b/06-To-Do-List-App/To-Do list.css
@@ -48,9 +48,14 @@ ul li {
     color: rgb(7, 7, 7);
     padding: 3px;
 }
+.completed {
+            text-decoration: line-through;
+            color: gray;
+        }
 
 button {
     margin-left: 5px;
     border-radius: 5px;
     font-weight: 600;
+
 }
